# annotator

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/core/: annotation.rs  file_list.rs  mod.rs  session.rs  store.rs  undo.rs
src/export/: json.rs  markdown.rs
src/git/: adjust.rs  diff.rs  mod.rs  rename.rs  repo.rs
src/tui/: annotation_popup.rs  app.rs  conflict_popup.rs  event.rs  file_list_popup.rs  highlight.rs  keymap.rs  mod.rs  render.rs  selection.rs  status_bar.rs  tree_view.rs  viewer.rs
