[package]
name = "annotator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
syntect = "5"
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
